# UniPD_BatagliaNavale

./: .gitignore  CMakeLists.txt  DiagrammaUML.drawio  README.md  build.sh  input.txt  mainLog.txt  mainLogPCVSPC.txt  mainLogPLVSPC.txt  output.txt  outputMain.txt  outputMainReplay.txt  progettazione.txt  replay.txt
include/: Attack_Grid.h  Battleship.h  ComputerVSComputer.h  Controller.h  DefenseGrid.h  Defense_Grid.h  Entity.h  Game.h  Grid.h  Helper.h  Pc_vs_pc.h  Pc_vs_player.h  PlayerVSComputer.h  Position.h  Replay.h  Submarine.h  Support.h  Unit.h  inputHelper.h
include_old/: Battleship.h  Defense_Grid.h  Game.h  Pc_vs_pc.h  Pc_vs_player.h  Replay.h  Submarine.h  Support.h  Unit.h
logs/: logPcInvalid.txt  mainLogPCVSPC.txt  mainLogPLVSPC.txt  replay.txt
src/: AttackGrid.cpp  Battleship.cpp  ComputerVSComputer.cpp  Controller.cpp  Entity.cpp  Game.cpp  Grid.cpp  Helper.cpp  PlayerVSComputer.cpp  Position.cpp  Replay.cpp  Submarine.cpp  Support.cpp  Unit.cpp  inputHelper.cpp  main.cpp  mainReplay.cpp
src_old/: Attack_Grid.cpp  Battleship.cpp  Defense_Grid.cpp  Submarine.cpp  Support.cpp
